--- a/app/admin/template/administrative/supplier.twig
+++ b/app/admin/template/administrative/supplier.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-	{% if action == 'edit' %}
+	{% if env.module.get_name() != 'administrative_supplier' %}
 
 		<ol class="breadcrumb">
 			<li><a href="/">{% trans "Home" %}</a></li>
@@ -10,132 +10,18 @@
 			<li class="active">{% trans "Edit supplier" %}</li>
 		</ol>
 
-		{% if errors is defined %}
-			<div class="alert alert-danger">
-				{% trans "The form contains mistakes. Please correct them." %}
-			</div>
-		{% elseif env.sticky_session.message is defined %}
-			{{ base.display_flash_message(env.sticky_session.message, 'supplier') }}
-		{% endif %}
+		<ul class="nav nav-tabs">
+			<li {% if env.module.get_name() == 'administrative_supplier_detail' %}class="active"{% endif %}>
+				<a href="/administrative/supplier/detail?id={{ supplier.id }}">{% trans "Details" %}</a>
+			</li>
+			<li {% if env.module.get_name() == 'administrative_supplier_document' %}class="active"{% endif %}>
+				<a href="/administrative/supplier/document?id={{ supplier.id }}">{% trans "Documents" %}</a>
+			</li>
+		</ul>
 
-		<form class="form form-horizontal form-condensed" method="post" action="/administrative/supplier?action=edit&id={{ supplier.id }}">
-
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					{% trans "Details" %}
-				</div>
-				<div class="panel-body">
-
-					<div class="form-group{% if 'company' in errors|keys %} has-error{% endif %}">
-						<label for="company" class="control-label col-xs-3">{% trans "Company" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="supplier[company]" id="company" class="form-control" value="{{ supplier.company }}">
-							{{ form.invalid_input('company', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Street" %}</label>
-						<div class="col-xs-5"><input type="text" name="supplier[street]" class="form-control" value="{{ supplier.street }}" /></div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Housenumber" %}</label>
-						<div class="col-xs-5"><input type="text" name="supplier[housenumber]" class="form-control" value="{{ supplier.housenumber }}"/></div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Zipcode" %}</label>
-						<div class="col-xs-5"><input type="text" name="supplier[zipcode]" class="form-control" value="{{ supplier.zipcode }}" /></div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "City" %}</label>
-						<div class="col-xs-5"><input type="text" name="supplier[city]" class="form-control" value="{{ supplier.city }}" /></div>
-					</div>
-
-					<div class="form-group{% if 'country_id' in errors|keys %} has-error{% endif %}">
-						<label for="country_id" class="col-xs-3 control-label">{% trans "Country" %}</label>
-						<div class="col-xs-5">
-							<select name="supplier[country_id]" class="form-control" onchange="change_country();">
-							{% for group in countries|keys  %}
-								{% if group == 'european' %}
-									<optgroup label="{% trans "European" %}">
-								{% else %}
-									<optgroup label="{% trans "Rest of the world" %}">
-								{% endif %}
-
-								{% for country in countries[group] %}
-									<option value="{{ country.id }}" data-iso2="{{ country.iso2 }}" {% if supplier.country_id == country.id %}selected="selected"{% endif %}>{{ country.name }}</option>
-								{% endfor %}
-								</optgroup>
-							{% endfor %}
-							</select>
-						</div>
-					</div>
-
-					<div class="form-group{% if 'vat' in errors|keys %} has-error{% endif %}">
-						<label for="vat" class="control-label col-xs-3">{% trans "Vat" %}</label>
-						<div class="col-xs-1"><input type="text" class="form-control" id="vat_prefix" readonly value="AT" /></div>
-						<div class="col-xs-4">
-							<input type="text" name="supplier[vat]" id="vat" class="form-control" value="{{ supplier.vat }}">
-							{{ form.invalid_input('vat', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'accounting_identifier' in errors|keys %} has-error{% endif %}">
-						<label for="accounting_identifier" class="control-label col-xs-3">{% trans "Accounting identifier" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="supplier[accounting_identifier]" class="form-control" value="{{ supplier.accounting_identifier }}">
-							{{ form.invalid_input('accounting_identifier', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'iban' in errors|keys %} has-error{% endif %}">
-						<label for="accounting_identifier" class="control-label col-xs-3">{% trans "IBAN" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="supplier[iban]" id="iban" class="form-control" value="{{ supplier.iban }}">
-							{{ form.invalid_input('iban', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'bic' in errors|keys %} has-error{% endif %}">
-						<label for="accounting_identifier" class="control-label col-xs-3">{% trans "BIC" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="supplier[bic]" id="bic" class="form-control" value="{{ supplier.bic }}">
-							{{ form.invalid_input('bic', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group">
-					    <label class="col-xs-3 control-label">{% trans "Comments" %}</label>
-					    <div class="col-xs-5">
-					        <textarea name="supplier[comment]" class="form-control">{{ supplier.comment }}</textarea>
-					    </div>
-					</div>
-
-					<div class="form-group">
-						<div class="col-xs-3 col-xs-offset-3">
-							<button class="btn btn-primary">
-								{% trans "Save" %}
-							</button>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</form>
-		<script type="text/javascript">
-			$(document).ready(function() {
-				$('input[name="supplier[iban]"]').mask('SSAA AAAA 0000 0000 0000 0000 0000', { placeholder: '____ ____ ____ ____ ____ ____ ____'  });
-			});
-
-			function change_country() {
-				iso2 = $('select[name="supplier[country_id]"] option:selected').attr('data-iso2');
-				$('#vat_prefix').val(iso2);
-			}
-			change_country();
-		</script>
+		<div class="tab-content">
+			{% block tab %}{% endblock tab %}
+		</div>
 
 	{% elseif action == 'add' %}
 
@@ -339,7 +225,7 @@
 				</td>
 				<td>{{ supplier.get_vat_formatted() }}</td>
 				<td>
-					<a href="/administrative/supplier?action=edit&id={{ supplier.id }}" title="">
+					<a href="/administrative/supplier/detail?id={{ supplier.id }}" title="">
 						<span class="glyphicon glyphicon-pencil"></span>
 					</a>
 				</td>
