link transactions to incoming invoices

--- a/app/admin/template/_default/layout.base.twig
+++ b/app/admin/template/_default/layout.base.twig
@@ -28,7 +28,7 @@
 	<script type="text/javascript" src="/jquery-ui/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/bootstrap-checkbox/js/bootstrap-checkbox.js"></script>
 	<script type="text/javascript" src="/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
-	<script type="text/javascript" src="/purl/purl.js"></script>
+	<script type="text/javascript" src="/urijs/src/URI.js"></script>
 
 	<!-- Syntax check in extractor editor -->
 	<script type="text/javascript" src="/codemirror/lib/codemirror.js"></script>
