--- a/app/admin/template/administrative/document.twig
+++ b/app/admin/template/administrative/document.twig
@@ -24,8 +24,6 @@
 			</div>
 		{% endif %}
 
-
-
 		<div class="row">
 			<div class="{% if document.preview_file_id > 0 %}col-xs-8{% else %}col-xs-12{% endif %}">
 				<div class="panel panel-default">
@@ -107,7 +105,6 @@
 							</div>
 
 							<div class="classname_fields classname_document_incoming_invoice classname_document_incoming_creditnote">
-
 								<div class="form-group{% if 'expiration_date' in errors|keys %} has-error{% endif %}">
 									<label class="col-xs-3 control-label">{% trans "Expiration date" %}</label>
 									<div class="col-xs-9">
@@ -115,7 +112,6 @@
 										{{ form.invalid_input('expiration_date', errors) }}
 									</div>
 								</div>
-
 							</div>
 
 							<div class="form-group">
@@ -133,289 +129,16 @@
 							</div>
 
 							<div class="classname_document_documentation">
-								<hr>
-								<div class="form-group">
-									<label class="col-xs-3 control-label">{% trans "Documentation for" %}</label>
-
-									<div class="col-xs-9">
-										<label class="radio-inline">
-											<input type="radio" name="documentation_for" value="customer" {% if document.customer_id > 0 %}checked{% endif %}>{% trans "Customer" %}
-										</label>
-
-										<label class="radio-inline">
-											<input type="radio" name="documentation_for" value="supplier" {% if document.supplier_id > 0 %}checked{% endif %}>{% trans "Supplier" %}
-										</label>
-									</div>
-								</div>
-
-								<script type="text/javascript">
-									$('input[name=documentation_for]').on('change', function() {
-										set_documentation_for();
-									});
-
-									function set_documentation_for() {
-										value = $('input[name=documentation_for]:checked').val();
-										console.log(value);
-										if (value == 'supplier') {
-											$('.documentation_for_customer').hide();
-											$('.documentation_for_supplier').show();
-										} else {
-											$('.documentation_for_customer').show();
-											$('.documentation_for_supplier').hide();
-										}
-									}
-								</script>
-
-								<div class="form-group{% if 'supplier_id' in errors|keys %} has-error{% endif %} documentation_for_supplier">
-									<label class="col-xs-3 control-label">{% trans "Supplier" %}</label>
-									<div class="col-xs-9">
-										<input type="text" name="supplier" class="form-control typeahead autocomplete_supplier" value="{% if document.supplier_id > 0 %}{{ document.supplier.company }}{% endif %}" placeholder="{% trans "Search supplier" %}...">
-										<input type="hidden" class="supplier_id" name="document[supplier_id]" value="{{ document.supplier_id }}">
-
-									</div>
-								</div>
-
-								<div class="form-group{% if 'customer_id' in errors|keys %} has-error{% endif %} documentation_for_customer">
-									<label class="col-xs-3 control-label">{% trans "Customer" %}</label>
-									<div class="col-xs-9">
-										<input type="text" name="customer" class="form-control typeahead autocomplete_customer" value="{% if document.customer_id > 0 %}{{ document.customer.get_display_name() }}{% endif %}" placeholder="{% trans "Search customer" %}...">
-										<input type="hidden" class="customer_id" name="document[customer_id]" value="{{ document.customer_id }}">
-
-									</div>
-								</div>
+								{% include 'administrative/document/document.form.documentation.twig' %}
 							</div>
 
 							<div class="classname_document_contract">
-								<hr>
-								<div class="form-group">
-									<label class="col-xs-3 control-label">{% trans "Contract for" %}</label>
-
-									<div class="col-xs-9">
-										<label class="radio-inline">
-											<input type="radio" name="contract_for" value="customer" {% if document.customer_id > 0 %}checked{% endif %}>{% trans "Customer" %}
-										</label>
-
-										<label class="radio-inline">
-											<input type="radio" name="contract_for" value="supplier" {% if document.supplier_id > 0 %}checked{% endif %}>{% trans "Supplier" %}
-										</label>
-									</div>
-								</div>
-
-								<script type="text/javascript">
-									$('input[name=contract_for]').on('change', function() {
-										set_contract_for();
-									});
-
-									function set_contract_for() {
-										value = $('input[name=contract_for]:checked').val();
-										console.log(value);
-										if (value == 'supplier') {
-											$('.contract_for_customer').hide();
-											$('.contract_for_supplier').show();
-										} else {
-											$('.contract_for_customer').show();
-											$('.contract_for_supplier').hide();
-										}
-									}
-								</script>
-
-								<div class="form-group{% if 'supplier_id' in errors|keys %} has-error{% endif %} contract_for_supplier">
-									<label class="col-xs-3 control-label">{% trans "Supplier" %}</label>
-									<div class="col-xs-9">
-										<input type="text" name="supplier" class="form-control typeahead autocomplete_supplier" value="{% if document.supplier_id > 0 %}{{ document.supplier.company }}{% endif %}" placeholder="{% trans "Search supplier" %}...">
-										<input type="hidden" class="supplier_id" name="document[supplier_id]" value="{{ document.supplier_id }}">
-
-									</div>
-								</div>
-
-								<div class="form-group{% if 'customer_id' in errors|keys %} has-error{% endif %} contract_for_customer">
-									<label class="col-xs-3 control-label">{% trans "Customer" %}</label>
-									<div class="col-xs-9">
-										<input type="text" name="customer" class="form-control typeahead autocomplete_customer" value="{% if document.customer_id > 0 %}{{ document.customer.get_display_name() }}{% endif %}" placeholder="{% trans "Search customer" %}...">
-										<input type="hidden" class="customer_id" name="document[customer_id]" value="{{ document.customer_id }}">
-
-									</div>
-								</div>
-
-								<div class="form-group">
-									<label class="col-xs-3 control-label">{% trans "From" %}</label>
-									<div class="col-xs-9">
-										<input type="text" class="form-control datepicker" name="document[from_date]" value="{{ document.from_date|date }}" />
-									</div>
-								</div>
-
-								<div class="form-group">
-									<label class="col-xs-3 control-label">{% trans "Until" %}</label>
-									<div class="col-xs-9">
-										<input type="text" class="form-control datepicker" name="document[to_date]" value="{{ document.to_date|date }}" />
-									</div>
-								</div>
-
+								{% include 'administrative/document/document.form.contract.twig' %}
 							</div>
 
-
-							<!-- Incoming invoice specific fields -->
 							<div class="classname_document_incoming_invoice classname_document_incoming_creditnote">
-								<hr>
-								<div class="form-group{% if 'supplier_id' in errors|keys %} has-error{% endif %}">
-									<label class="col-xs-3 control-label">{% trans "Supplier" %}</label>
-									<div class="col-xs-9">
-										<input type="text" name="supplier" class="form-control typeahead autocomplete_supplier" value="{% if document.supplier_id > 0 %}{{ document.supplier.company }}{% endif %}" placeholder="{% trans "Search supplier" %}...">
-										<input type="hidden" class="supplier_id" name="document[supplier_id]" value="{{ document.supplier_id }}">
-
-									</div>
-								</div>
-
-								<div class="form-group{% if 'supplier_identifier' in errors|keys %} has-error{% endif %}">
-									<label class="col-xs-3 control-label">{% trans "Supplier identifier" %}</label>
-									<div class="col-xs-5">
-										<input type="text" name="document[supplier_identifier]" class="form-control" value="{{ document.supplier_identifier }}" data-toggle="popover" title="{% trans "Already in use" %}" data-content="{% trans "This identifier is already used for another invoice." %}" onchange="check_supplier_identifier();" />
-									</div>
-									{{ form.invalid_input('supplier_identifier', errors) }}
-								</div>
-
-								<div class="form-group{% if 'accounting_identifier' in errors|keys %} has-error{% endif %}">
-									<label class="col-xs-3 control-label">{% trans "Accounting identifier" %}</label>
-									<div class="col-xs-5">
-										<input type="text" name="document[accounting_identifier]" class="form-control" value="{{ document.accounting_identifier }}"/>
-									</div>
-									{{ form.invalid_input('accounting_identifier', errors) }}
-								</div>
-
-								<div class="form-group{% if 'price_excl' in errors|keys %} has-error{% endif %}">
-									<label class="col-xs-3 control-label">{% trans "Price excl VAT" %}</label>
-									<div class="col-xs-5">
-										<div class="input-group">
-											<span class="input-group-addon">&euro;</span>
-											<input type="text" name="document[price_excl]" onchange="check_vat();" class="form-control" value="{{ document.price_excl }}" >
-										</div>
-										{{ form.invalid_input('price_excl', errors) }}
-									</div>
-								</div>
-
-								<div class="form-group{% if 'price_incl' in errors|keys %} has-error{% endif %}">
-									<label class="col-xs-3 control-label">{% trans "Price incl VAT" %}</label>
-									<div class="col-xs-5">
-										<div class="input-group">
-											<span class="input-group-addon">&euro;</span>
-											<input type="text" name="document[price_incl]" onchange="check_vat();" data-toggle="popover" title="{% trans "VAT problem" %}" data-content="{% trans "The VAT amount seems to be incorrect" %}" class="form-control" value="{{ document.price_incl }}" >
-										</div>
-										{{ form.invalid_input('price_incl', errors) }}
-									</div>
-								</div>
-
-								<script type="text/javascript">
-									function check_vat() {
-										price_incl = $('input[name="document[price_incl]"]').val();
-										price_excl = $('input[name="document[price_excl]"]').val();
-
-										vat = 100 / price_excl * price_incl - 100;
-										console.log(vat);
-										vat = Math.round(vat * 100) / 100
-										console.log(vat);
-
-										if (vat != 21 && vat != 6 && vat != 12) {
-											$('input[name="document[price_incl]"]').popover({
-												container: 'body'
-											});
-
-											$('input[name="document[price_incl]"]').popover('show');
-										} else {
-											$('input[name="document[price_incl]"]').popover('hide');
-										}
-									}
-
-									function check_supplier_identifier() {
-										supplier_id = $('input[name="document[supplier_id]"]').val();
-										supplier_identifier = $('input[name="document[supplier_identifier]"]').val();
-										data = {
-											'supplier_id': supplier_id,
-											'supplier_identifier': supplier_identifier,
-											'document_id': {{ document.id }}
-										}
-										$.post('/administrative/document/invoice?action=check_supplier_identifier', data, function(response) {
-											$('input[name="document[supplier_identifier]"]').popover({
-												container: 'body'
-											});
-											if (response > 0) {
-												$('input[name="document[supplier_identifier]"]').popover('show');
-											} else {
-												$('input[name="document[supplier_identifier]"]').popover('hide');
-											}
-										});
-
-									}
-
-								</script>
-
-								<div class="form-group">
-									<label class="col-xs-3 control-label">{% trans "Payment message" %}</label>
-									<div class="col-xs-9">
-										<div class="radio">
-											<label><input type="radio" name="payment_message_type" value="payment_message_type_structured" {% if document.payment_message == '' %}checked{% endif %}>{% trans "Structured message" %}</label>
-										</div>
-										<div class="radio">
-											<label><input type="radio" name="payment_message_type" value="payment_message_type_free" {% if document.payment_message != '' %}checked{% endif %}>{% trans "Free message" %}</label>
-										</div>
-									</div>
-								</div>
-
-								<div class="form-group {% if 'payment_structured_message' in errors|keys %} has-error{% endif %}" id="payment_message_type_structured">
-									<div class="col-xs-9 col-xs-offset-3">
-										<input type="text" class="form-control" name="document[payment_structured_message]" value="{{ document.payment_structured_message }}" />
-									</div>
-								</div>
-
-
-								<div class="form-group" id="payment_message_type_free">
-									<div class="col-xs-9 col-xs-offset-3">
-										<textarea name="document[payment_message]" class="form-control autogrow">{{ document.payment_message }}</textarea>
-									</div>
-								</div>
-
-								<div class="form-group">
-									<label class="col-xs-3 control-label">{% trans "IBAN" %}</label>
-									<div class="col-xs-9">
-										<p class="form-control-static" id="iban">
-											{% if document.supplier_id == '' or document.supplier_id == 0 or document.supplier.iban == '' %}
-												<em>{% trans "Unknown IBAN" %}</em>
-											{% else %}
-												{{ document.supplier.iban }}
-											{% endif %}
-										</p>
-									</div>
-								</div>
-
-								<div class="form-group">
-									<label class="col-xs-3 control-label">{% trans "Paid" %}</label>
-									<div class="col-xs-9">
-										<input type="checkbox" name="document[paid]" id="paid" data-group-cls="btn-group-sm" {% if document.paid %}checked{% endif %}/>
-									</div>
-								</div>
-								<script type="text/javascript">
-									$(document).ready(function() {
-										$('input[name="document[payment_structured_message]"]').mask("000/0000/00000", {placeholder: "___/____/_____"});
-
-										$('input[name=payment_message_type]').on('change', function() {
-											select_payment_message_type();
-										});
-										select_payment_message_type();
-									});
-									function select_payment_message_type() {
-										value = $('input[name=payment_message_type]:checked').val();
-
-										value = $('input[name=payment_message_type]:checked').val();
-										$('#payment_message_type_structured').hide();
-										$('#payment_message_type_free').hide();
-
-										if ( $('input[name=payment_message_type]').parents('.form-group').is(':visible') ){
-											$('#' + value).show();
-										}
-									}
-								</script>
+								{% include 'administrative/document/document.form.invoice.twig' %}
 							</div>
-
-							<!-- End of incoming invoice specific fields -->
 
 							<hr>
 							<div class="form-group">
@@ -453,8 +176,65 @@
 				</div>
 			</div>
 			{% endif %}
-
 		</div>
+
+		{% if document.classname == 'Document_Incoming_Invoice' %}
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">{% trans "Payments" %}</div>
+					<div class="panel-body">
+					{% for balance in document.get_bank_account_statement_transaction_balances() %}
+						{% set transaction = balance.bank_account_statement_transaction %}
+						{% if loop.first %}
+							<table class="table table-hover table-alternate">
+								<thead>
+									<tr>
+										<th width="15%">{% trans "Date" %}</th>
+										<th>&nbsp;</th>
+										<th>{% trans "Message" %}</th>
+										<th>{% trans "To" %}</th>
+										<th>{% trans "Account number" %}</th>
+										<th>{% trans "Amount" %}</th>
+									</tr>
+								</thead>
+								<tbody>
+								<tr>
+									<td>{{ document.date|date }}</td>
+									<td colspan="4">{% trans "Incoming invoice" %} {{ document.id }}</td>
+									<td>&euro;{{ document.price_incl|number_format }}</td>
+								</tr>
+						{% endif %}
+						<tr>
+							<td>{{ transaction.date|date }}</td>
+							<td>
+								<a href="/financial/account/transaction?action=edit&id={{ transaction.id }}">
+									{% trans "Transaction" %} {{ transaction.id }}
+								</a>
+							</td>
+							<td>{{ transaction.get_message() }}</td>
+							<td>{{ transaction.other_account_name }}</td>
+							<td>{{ transaction.other_account_number }}</td>
+							<td>&euro;{{ transaction.amount|number_format }}</td>
+						</tr>
+						{% if loop.last %}
+							</tbody>
+							<thead>
+								<tr>
+									<th colspan="5">{% trans "Balance" %}</th>
+									<th>&euro;{{ document.get_balance()|number_format }}</th>
+								</tr>
+							</thead>
+							</table>
+						{% endif %}
+					{% else %}
+						<p>{% trans "No payments added yet" %}</p>
+					{% endfor %}
+					</div>
+				</div>
+			</div>
+		</div>
+		{% endif %}
 
 		{% include 'administrative/document/extractor/modal.extractor_error.twig' with {id: 'extractor_error' }  %}
 		{% include 'administrative/document/extractor/modal.extractor.twig' with {id: 'extractor', modal_size: 'lg' }  %}
