- fix typo in table name - improve bank account graph

--- a/app/admin/template/financial/account/chart.twig
+++ b/app/admin/template/financial/account/chart.twig
@@ -29,10 +29,18 @@
 					    //minRange: 1,
 					    ordinal: false
 					},
+					yAxis: {
+						labels: {
+							formatter: function() {
+								return '€' + this.axis.defaultLabelFormatter.call(this);
+							}
+						}
+					},
 					rangeSelector : {
 					    selected : 1
 					},
 					series : [{
+						name: "{% trans "Balance" %}",
 					    data : data,
 						events: {
 							click: function(e) {
